# decipherlab

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  BENCHMARK_DESIGN.md  DATASET_PREPARATION.md  DATASET_SELECTION.md  DATASET_SELECTION_SECONDARY.md  DATASET_SELECTION_TERTIARY.md  EXPERIMENT_PROTOCOL.md  EXTERNAL_VALIDITY_GAP.md  HISTORICAL_NEWSPAPERS_GOLD_PROTOCOL.md  HISTORICAL_NEWSPAPERS_VALIDATION_PROTOCOL.md  IMPLEMENTATION_PLAN.md  LIMITATIONS_AND_THREATS.md  NEW_CLAIMS_AUDIT.md  NEXT_PAPER_PLAN.md  PAPER_RESULTS_NOTES.md  PROPAGATION_FRAMEWORK.md  PROPAGATION_RESULTS_NOTES.md  REAL_DATA_TRUST_HARDENING.md  REAL_DOWNSTREAM_TASK_DESIGN.md  REAL_DOWNSTREAM_TASK_REDESIGN.md  REAL_GROUPED_DATA_PLAN.md  REAL_GROUPED_NEXT_STEP_DECISION.md  REAL_GROUPED_STRENGTHENING_DECISION.md  REAL_SEQUENCE_DATASET_FEASIBILITY.md  REQUIRED_REAL_DATA_SPEC.md  RESEARCH_BLUEPRINT.md  ROADMAP.md  SECOND_REAL_GROUPED_CORPUS_SEARCH.md  SEQUENCE_BRANCH.md  SEQUENCE_DATASET_SEARCH.md  SEQUENCE_RESULTS_NOTES.md  STRUCTURED_DECODER_DESIGN.md  SUPPORT_AWARE_ADAPTIVE_DECODER.md  UNCERTAINTY_EXPERIMENT_TEMPLATE.md
outputs/: cross_dataset_ambiguity_rows.csv  cross_dataset_failure_summary.csv  cross_dataset_summary.csv  cross_dataset_summary.json  cross_dataset_summary.md  cross_dataset_tables_with_ci.csv  effect_size_summary.csv  effect_size_summary.md  propagation_case_studies.md  propagation_cross_dataset_summary.csv  propagation_cross_dataset_summary.md  propagation_features.csv  propagation_features.md  propagation_model_summary.md  propagation_regime_summary.csv  propagation_regime_summary.md  propagation_thresholds.csv  propagation_thresholds.md  real_data_trust_summary.md  real_downstream_coverage_analysis.csv  (+15 more)
(+339 files in other folders)
